build: main namespace not found

--- a/plugin/resources/paper-plugin.yml
+++ b/plugin/resources/paper-plugin.yml
@@ -1,4 +1,4 @@
 name: grass-paper
 version: $version
-main: $main
+main: io.github.grassmc.paper.plugin.InternalGrassPaperPlugin
 api-version: "1.20"
