--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-# Project
+### Project
 group=io.github.grassmc
 version=0.1.0-SNAPSHOT
-# Gradle
+### Gradle
 org.gradle.parallel=true
 org.gradle.caching=true
