--- a/plugin/src/main/resources/paper-plugin.yml
+++ b/plugin/src/main/resources/paper-plugin.yml
@@ -1,4 +1,5 @@
-name: grass-paper
+name: Typhon
 version: $version
 main: io.github.grassmc.paper.plugin.InternalGrassPaperPlugin
 api-version: "1.20"
+authors: [ GrassMC, tozydev ]
