--- a/plugin/src/main/resources/paper-plugin.yml
+++ b/plugin/src/main/resources/paper-plugin.yml
@@ -1,5 +1,5 @@
 name: Typhon
 version: $version
-main: io.github.grassmc.paper.plugin.InternalGrassPaperPlugin
+main: io.github.grassmc.typhon.plugin.TyphonCorePlugin
 api-version: "1.20"
 authors: [ GrassMC, tozydev ]
