build: configure publish plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ version=0.1.0-SNAPSHOT
 ### Gradle
 org.gradle.parallel=true
 org.gradle.caching=true
+### Maven Publish
+RELEASE_SIGNING_ENABLED=true
